# NA62UserCode

./: .gitignore  CMakeLists.txt  README.md  config
Analyzers/include/: BasicSelection.hh  DrawLKr.hh  DrawLKrHits.hh  ID_HWClusterPi.hh  PhotonID_Conversion.hh  PhotonID_EnergyCut.hh  PhotonID_Final.hh  PhotonID_HWCells.hh  PhotonID_RMSSelection.hh  PhotonID_SeedFraction.hh  PhotonID_SelectFirsts.hh  PhotonID_StrawRemoval.hh  Photon_MultiCluster.hh  Photons_0Cluster.hh  Pi0ID.hh  ShowerLKr.hh  SinglePhoton.hh  associatePhotons.hh  clusterNN.hh  phoconv.hh  piggg.hh  piggg_HW.hh  piggg_gen.hh  pipAnalysis.hh  skimPhotonConversion.hh  tes_gen.hh  tes_use.hh  test.hh  testGeo.hh  testGeom.hh  testHistoComparison.hh
Analyzers/src/: BasicSelection.cc  DrawLKr.cc  DrawLKrHits.cc  ID_HWClusterPi.cc  PhotonID_Conversion.cc  PhotonID_EnergyCut.cc  PhotonID_Final.cc  PhotonID_HWCells.cc  PhotonID_RMSSelection.cc  PhotonID_SeedFraction.cc  PhotonID_SelectFirsts.cc  PhotonID_StrawRemoval.cc  Photon_MultiCluster.cc  Photons_0Cluster.cc  Pi0ID.cc  ShowerLKr.cc  SinglePhoton.cc  associatePhotons.cc  clusterNN.cc  phoconv.cc  piggg.cc  piggg_HW.cc  piggg_gen.cc  pipAnalysis.cc  skimPhotonConversion.cc  tes_gen.cc  test.cc  testGeo.cc  testGeom.cc  testHistoComparison.cc
NA62UserCode/UserCode/Analyzers/include/: PhotonID_SelectFirsts.hh  associatePhotons.hh  skimPhotonConversion.hh  tes_gen.hh  testGeom.hh
NA62UserCode/UserCode/Analyzers/src/: BasicSelection.cc  PhotonID_Final.cc  PhotonID_StrawRemoval.cc  Pi0ID.cc  SinglePhoton.cc  associatePhotons.cc  phoconv.cc  piggg.cc  tes_gen.cc
PhysicsObjects/: CMakeLists.txt
UserCode/: config
UserCode/Analyzers/include/: ID_HWClusterPi.hh  PhotonID_Conversion.hh  PhotonID_HWCells.hh  PhotonID_SeedFraction.hh  PhotonID_StrawRemoval.hh  Photon_MultiCluster.hh  clusterNN.hh  piggg_gen.hh
UserCode/Analyzers/src/: ID_HWClusterPi.cc  PhotonID_Conversion.cc  PhotonID_EnergyCut.cc  PhotonID_HWCells.cc  PhotonID_SelectFirsts.cc  Photon_MultiCluster.cc  clusterNN.cc  piggg_HW.cc  piggg_gen.cc  tes_gen.cc  tes_use.cc
UserCode/macros/: gamma_electrons.C
macros/: stack.C  vertex.C
scripts/: suppFile2.supp
